src/objects/Meta__c.object
<CustomObject>
    <fields>
        <fullName>Asesor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asesor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cant_de_oport_comerciales_convertidas__c</fullName>
        <label>Cant de oport comerciales convertidas</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_polizas__c</fullName>
        <label>Cantidad de pólizas</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cotizacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cotización</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Metas</relationshipLabel>
        <relationshipName>Metas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mes__c</fullName>
        <label>Mes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enero</fullName>
                </value>
                <value>
                    <fullName>Febrero,</fullName>
                </value>
                <value>
                    <fullName>Marzo,</fullName>
                </value>
                <value>
                    <fullName>Abril,</fullName>
                </value>
                <value>
                    <fullName>Mayo,</fullName>
                </value>
                <value>
                    <fullName>Junio,</fullName>
                </value>
                <value>
                    <fullName>Julio,</fullName>
                </value>
                <value>
                    <fullName>Agosto,</fullName>
                </value>
                <value>
                    <fullName>Septiembre,</fullName>
                </value>
                <value>
                    <fullName>Octubre,</fullName>
                </value>
                <value>
                    <fullName>Noviembre</fullName>
                </value>
                <value>
                    <fullName>Diciembre</fullName>
                </value>
                <value>
                    <fullName>Abril</fullName>
                    <isActive>false</isActive>
                    <label>Abril</label>
                </value>
                <value>
                    <fullName>Agosto</fullName>
                    <isActive>false</isActive>
                    <label>Agosto</label>
                </value>
                <value>
                    <fullName>Febrero</fullName>
                    <isActive>false</isActive>
                    <label>Febrero</label>
                </value>
                <value>
                    <fullName>Julio</fullName>
                    <isActive>false</isActive>
                    <label>Julio</label>
                </value>
                <value>
                    <fullName>Junio</fullName>
                    <isActive>false</isActive>
                    <label>Junio</label>
                </value>
                <value>
                    <fullName>Marzo</fullName>
                    <isActive>false</isActive>
                    <label>Marzo</label>
                </value>
                <value>
                    <fullName>Mayo</fullName>
                    <isActive>false</isActive>
                    <label>Mayo</label>
                </value>
                <value>
                    <fullName>Octubre</fullName>
                    <isActive>false</isActive>
                    <label>Octubre</label>
                </value>
                <value>
                    <fullName>Septiembre</fullName>
                    <isActive>false</isActive>
                    <label>Septiembre</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meta</label>
    <nameField>
        <label>Nombre de Meta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>